--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -46,6 +46,21 @@
 // @use 'partials/animation';
 // ==============================================================================================
 
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Regular.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: 'Roboto';
+    src: url('../fonts/Roboto-Bold.woff2') format('woff2');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+}
 
 
 // Для стартових налаштувнань теми
