add button styles

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -3,7 +3,7 @@ $fontFamily: 'Roboto', sans-serif;
 $fontSize: 18px;
 
 // Кольори
-$bgColor: white;
+$bgColor: #CACACA;
 $transitionDuration: .8s;
 $fontColor: rgb(67, 67, 70);
 $linkColor: rgb(87, 37, 109);
