--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -1,12 +1,17 @@
-<!-- <header class="header">
+<header class="header">
   <div class="header__container">
-    <a href="index.html" class="header__logo">
-      <img src="" alt="Header logo">
-    </a>
     <nav class="header__nav">
+      <a href="#hero" class="button button__header button__header--active">Home</a>
+      <a href="#" class="button button__header">Pas rapid</a>
+      <a href="#" class="button button__header">De ce noi</a>
+      <a href="#" class="button button__header">Pentru firme</a>
+      <a href="#" class="button button__green button__header">Talente ideale</a>
     </nav>
     <div class="header__burger">
       <span></span>
     </div>
+    <a href="index.html" class="header__logo">
+      <img src="@img/header/logo.svg" alt="Header logo" draggable="false">
+    </a>
   </div>
-</header> -->
+</header>
