--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -2,6 +2,7 @@
 @use 'mixins' as *;
 @use 'partials/header';
 @use 'partials/footer';
+@use 'partials/buttons';
 
 
 // ==============================================================================================
@@ -96,45 +97,6 @@ body {
     width: 100%;
     margin: 0 auto;
     padding: 0 15px
-}
-
-// Застосування стилів для посилання: колір, час анімації, активний стан.
-a {
-    color: $linkColor;
-    text-decoration: none;
-    transition-duration: $transitionDuration;
-}
-
-a:hover {
-    color: $linkHoverColor;
-}
-
-a:active {
-    color: $activeColor;
-}
-
-// Застосування стилів для кнопкки з класом .button
-.button {
-    width: fit-content;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $buttonBgColor;
-    transition-duration: $transitionDuration;
-    color: $buttonFontColor;
-    padding: $buttonPaddings;
-    border-radius: $buttonBorderRadius;
-    cursor: pointer;
-    border: 0;
-    outline: 0;
-}
-
-.button:hover {
-    background-color: $buttonHover;
-}
-
-.button:active {
-    background-color: $buttonActive;
 }
 
 // Загальні стилі для списків
