--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -36,9 +36,18 @@
     &__header {
         padding: 8px 12px;
 
+        &._anim {
+            animation: iconFadeIn 1.5s ease-in-out;
+        }
+
         &--active {
             background-color: #000;
             color: #fff;
+        }
+
+        @media (max-width: 992px) {
+            font-size: 26px;
+            border: 2px solid #000;
         }
     }
 
@@ -52,4 +61,14 @@
         }
     }
 
+}
+
+@keyframes iconFadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
 }
