--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -5,7 +5,7 @@ $fontSize: 18px;
 // Кольори
 $bgColor: #CACACA;
 $transitionDuration: .8s;
-$fontColor: rgb(67, 67, 70);
+$fontColor: #000000;
 $linkColor: rgb(87, 37, 109);
 $linkHoverColor: rgba(79, 13, 106, 0.578);
 $activeColor: rgb(51, 0, 128);
@@ -26,7 +26,7 @@ $h2FontWeight: 800;
 $h3FontWeight: 700;
 
 // Стилі кнопки .button
-$buttonBgColor: rgb(80, 80, 117);
+$buttonBgColor: #000000;
 $buttonFontColor: white;
 $buttonPaddings: 5px 20px;
 $buttonBorderRadius: 10px;
