--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -1,4 +1,34 @@
 <footer class="footer">
+  <div class="footer__container">
+    <div class="footer__col footer__left">
+      <h2>Nu uita, îți găsim cel mai tare loc de muncă!</h2>
+      <button class="button button__green">Hai să vezi</button>
+    </div>
+    <div class="footer__col footer__right">
+      <div class="footer__row">
+        <nav class="footer__nav">
+          <a href="#hero" class="button button__footer button__footer--active">Home</a>
+          <a href="#" class="button button__footer">Pas rapid</a>
+          <a href="#" class="button button__footer">De ce noi</a>
+          <a href="#" class="button button__footer">Pentru firme</a>
+          <a href="#" class="button button__green button__footer">Talente ideale</a>
+        </nav>
+        <div class="footer__privacy">
+          <a href="#">Politica de cookies</a>
+          <a href="#">Termeni de utilizare</a>
+          <a href="#">Politica de prelucrare a datelor</a>
+          <a href="#">Retragerea consimțământului</a>
+          <a href="#">Furnizori terțe părți</a>
+        </div>
+      </div>
+      <div class="footer__info">
+        <p>NOI MUNCIM.RO SRL · Sediul: Strada Inventată Nr. 99A, Jud. Fictiv · CUI: 98765432 · Nr. Registrul Comerțului:
+          J12/5678/2025 · Tel: +40 000 000 000 · Informații generale: demo@muncim.ro · Informații legate de date
+          personale: testprivacy@muncim.ro</p>
+        <p>© NOI MUNCIM SRL. Toate drepturile rezervate.</p>
+      </div>
+    </div>
+  </div>
 </footer>
 <script src="js/functions/lazyImg.js" defer></script>
 <script type="module" src="js/app.js"></script>
