--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,3 +1,83 @@
 .footer {
+    width: 100%;
+    padding: 50px 0;
 
+    &__container {
+        display: flex;
+        gap: 30px;
+        justify-content: space-between;
+
+        @media (max-width: 768px) {
+            flex-direction: column;
+        }
+    }
+
+    h2 {
+        font-size: clamp(22px, 3vw, 36px);
+
+        @media (max-width: 576px) {
+            max-width: 70%;
+        }
+    }
+
+    &__col {
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__row {
+        display: flex;
+        gap: 90px;
+
+        @media (max-width: 992px) {
+            gap: 20px;
+            flex-direction: column;
+        }
+    }
+
+    &__left {
+        width: 100%;
+        max-width: 450px;
+        gap: 15px;
+    }
+
+    &__right {
+        width: 100%;
+        max-width: 600px;
+    }
+
+    &__nav {
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
+
+    &__privacy {
+        display: flex;
+        flex-direction: column;
+        gap: 16px;
+
+        a {
+            color: #000;
+            text-transform: uppercase;
+            font-size: 16px;
+
+            &:hover {
+                text-decoration: none;
+            }
+        }
+    }
+
+    &__info {
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+        margin: 60px 0 0 0;
+
+        p {
+            font-size: 14px;
+            text-transform: uppercase;
+            line-height: 140%;
+        }
+    }
 }
