--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -8,10 +8,10 @@
       <div class="footer__row">
         <nav class="footer__nav">
           <a href="#hero" class="button button__footer button__footer--active">Home</a>
-          <a href="#" class="button button__footer">Pas rapid</a>
-          <a href="#" class="button button__footer">De ce noi</a>
-          <a href="#" class="button button__footer">Pentru firme</a>
-          <a href="#" class="button button__green button__footer">Talente ideale</a>
+          <a href="#start" class="button button__footer">Pas rapid</a>
+          <a href="#why" class="button button__footer">De ce noi</a>
+          <a href="#companies" class="button button__footer">Pentru companii</a>
+          <a href="#team" class="button button__green button__footer">Echipa noastră</a>
         </nav>
         <div class="footer__privacy">
           <a href="#">Politica de cookies</a>
