--- a/src/html/partials/header.html
+++ b/src/html/partials/header.html
@@ -2,10 +2,10 @@
   <div class="header__container">
     <nav class="header__nav">
       <a href="#hero" class="button button__header button__header--active">Home</a>
-      <a href="#" class="button button__header">Pas rapid</a>
-      <a href="#" class="button button__header">De ce noi</a>
-      <a href="#" class="button button__header">Pentru firme</a>
-      <a href="#" class="button button__green button__header">Talente ideale</a>
+      <a href="#start" class="button button__header">Pas rapid</a>
+      <a href="#why" class="button button__header">De ce noi</a>
+      <a href="#companies" class="button button__header">Pentru companii</a>
+      <a href="#team" class="button button__green button__header">Echipa noastră</a>
     </nav>
     <div class="header__burger">
       <span></span>
