--- a/src/html/partials/footer.html
+++ b/src/html/partials/footer.html
@@ -14,11 +14,11 @@
           <a href="#team" class="button button__green button__footer">Echipa noastră</a>
         </nav>
         <div class="footer__privacy">
-          <a href="#">Politica de cookies</a>
-          <a href="#">Termeni de utilizare</a>
-          <a href="#">Politica de prelucrare a datelor</a>
-          <a href="#">Retragerea consimțământului</a>
-          <a href="#">Furnizori terțe părți</a>
+          <a href="/politica-cookies">Politica de cookies</a>
+          <a href="/termeni-utilizare">Termeni de utilizare</a>
+          <a href="/politica-prelucrare-date">Politica de prelucrare a datelor</a>
+          <a href="/retragere-consimtamant">Retragerea consimțământului</a>
+          <a href="/furnizori-terti">Furnizori terțe părți</a>
         </div>
       </div>
       <div class="footer__info">
