--- a/src/scss/partials/_buttons.scss
+++ b/src/scss/partials/_buttons.scss
@@ -13,6 +13,7 @@
     max-width: fit-content;
     cursor: pointer;
     text-wrap: nowrap;
+    text-transform: uppercase;
 
     &:hover {
         transform: scale(0.95);
