--- a/src/html/components/hero.html
+++ b/src/html/components/hero.html
@@ -1,4 +1,4 @@
-<section class="hero">
+<section class="hero" id="hero">
     <div class="hero__container">
         <div class="hero__text">
             <span class="hero__label label">căutarea s-a încheiat</span>
@@ -9,7 +9,7 @@
                 echipa noastră se ocupă să îți găsească cel mai bun loc de muncă, pe baza cerințelor tale. Dă-ne de
                 lucru!
             </p>
-            <button class="button button__green hero__button">Descoperă <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
+            <button class="button button__green hero__button" onclick="window.location.hash = 'start'">Descoperă <svg width="18" height="18" viewBox="0 0 18 18" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g clip-path="url(#clip0_1_477)">
                         <path fill-rule="evenodd" clip-rule="evenodd"
