--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -4,6 +4,7 @@
 @use 'partials/footer';
 @use 'partials/buttons';
 @use 'components/hero';
+@use 'components/cta';
 
 
 // ==============================================================================================
@@ -70,6 +71,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    scroll-behavior: smooth;
+    scroll-margin-top: 100px;
 }
 
 body {
