add component/cta update hero and header styles

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -42,6 +42,7 @@
         font-size: clamp(20px, 2vw, 24px);
         font-weight: 400;
         text-transform: uppercase;
+        padding: 0;
     }
 
     &__title {
