--- a/src/html/components/cta.html
+++ b/src/html/components/cta.html
@@ -3,7 +3,7 @@
         <div class="cta__text">
             <span class="label">Uite ce trebuie să faci</span>
             <h2 class="cta__title">Ca să îți<br> găsim de lucru</h2>
-            <p class="cta__subtitle">Urmează acești 3 pași simpli – iar după ce te înscrii, ne ocupăm noi de tot.</p>
+            <h3 class="cta__subtitle">Urmează acești 3 pași simpli – iar după ce te înscrii, ne ocupăm noi de tot.</h3>
             <div class="cta__items">
                 <div class="cta__item">
                     <img data-src="@img/cta/1.svg" alt="1 step" class="lazy">
