--- a/src/html/components/hero.html
+++ b/src/html/components/hero.html
@@ -3,7 +3,7 @@
         <div class="hero__text">
             <span class="hero__label label">căutarea s-a încheiat</span>
             <h1 class="hero__title">loc de mun ­că noi ți-am dat</h1>
-            <p class="hero__subtitle">Pe muncim.ro nu cauți de muncă. Îți găsim noi.</p>
+            <h3 class="hero__subtitle">Pe muncim.ro nu cauți de muncă. Îți găsim noi.</h3>
             <p class="hero__description">
                 Te înregistrezi cu datele tale complete, ne spui la ce te pricepi și în ce zonă ai vrea să lucrezi, iar
                 echipa noastră se ocupă să îți găsească cel mai bun loc de muncă, pe baza cerințelor tale. Dă-ne de
