--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -5,6 +5,7 @@
 @use 'partials/buttons';
 @use 'components/hero';
 @use 'components/cta';
+@use 'components/content';
 
 
 // ==============================================================================================
@@ -130,6 +131,12 @@ h2 {
             display: none;
         }
     }
+}
+
+h3 {
+    color: #000;
+    font-size: clamp(18px, 2.5vw, 26px);
+    font-weight: 400;
 }
 
 .label {
