--- a/src/html/components/why.html
+++ b/src/html/components/why.html
@@ -1,5 +1,5 @@
 <div class="content" id="why">
-    <div class="content__container">
+    <div class="content__container border-bottom">
         <img data-src="@img/content/image.png" alt="Content image" class="content__image lazy" draggable="false">
         <div class="content__text">
             <span class="label">de ce muncim.ro?</span>
