--- a/src/scss/components/_content.scss
+++ b/src/scss/components/_content.scss
@@ -14,6 +14,16 @@
         }
     }
 
+    .content__container {
+        padding: 0 15px 60px 15px;
+    }
+
+        &--companies {
+        .content__container {
+            padding: 60px 15px;
+        }
+    }
+
     &__image {
         max-width: 680px;
         aspect-ratio: 849 / 688;
