--- a/src/html/components/companies.html
+++ b/src/html/components/companies.html
@@ -1,5 +1,5 @@
 <div class="content content--companies" id="companies">
-    <div class="content__container border-bottom">
+    <div class="content__container">
         <div class="content__text">
             <span class="label">Pentru companii?</span>
             <h2>Ține costurile sub control</h2>
