--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,6 +6,7 @@
 @use 'components/hero';
 @use 'components/cta';
 @use 'components/content';
+@use 'components/cards';
 
 
 // ==============================================================================================
