upd header script

--- a/src/html/components/team.html
+++ b/src/html/components/team.html
@@ -1,4 +1,4 @@
-<div class="content content--team" id="companies">
+<div class="content content--team" id="team">
     <div class="content__container">
                 <img data-src="@img/content/image-2.png" alt="Content image" class="content__image lazy" draggable="false">
         <div class="content__text">
