--- a/src/scss/partials/_footer.scss
+++ b/src/scss/partials/_footer.scss
@@ -1,15 +1,19 @@
 .footer {
     width: 100%;
-    padding: 50px 0;
 
     &__container {
         display: flex;
         gap: 30px;
         justify-content: space-between;
+        border-top: 3px solid #000;
 
         @media (max-width: 768px) {
             flex-direction: column;
         }
+    }
+
+    .footer__container {
+        padding: 50px 15px;
     }
 
     h2 {
