--- a/src/html/partials/footer-tech.html
+++ b/src/html/partials/footer-tech.html
@@ -7,11 +7,11 @@
     <div class="footer__col footer__right">
       <div class="footer__row">
         <nav class="footer__nav">
-          <a href="#hero" class="button button__footer button__footer--active">Home</a>
-          <a href="#start" class="button button__footer">Pas rapid</a>
-          <a href="#why" class="button button__footer">De ce noi</a>
-          <a href="#companies" class="button button__footer">Pentru companii</a>
-          <a href="#team" class="button button__green button__footer">Echipa noastră</a>
+          <a href="index.html#hero" class="button button__footer button__footer--active">Home</a>
+          <a href="index.html#start" class="button button__footer">Pas rapid</a>
+          <a href="index.html#why" class="button button__footer">De ce noi</a>
+          <a href="index.html#companies" class="button button__footer">Pentru companii</a>
+          <a href="index.html#team" class="button button__green button__footer">Echipa noastră</a>
         </nav>
         <div class="footer__privacy">
           <a href="politica-cookies.html">Politica de cookies</a>
